Aggiunta AF alle classi